tests/const_declaration.lmq
let x = 0;
println("Creating global variable x");
x = 1;
println("Setting global variable x to");

function testLocal(){
    const y1 = 5;
    print("Creating immutable local letiable y1");
    let y2 = 10;
    y2 = 20;
    y1 = 10; // error

    println(y2);
    println(y1);
    println(x);
}

testLocal();

function testUpvalue(){ 
    const x1 = 5;
    let x2 = 10;
    const x3;

    function testUpvalueInner(){ 
        println(x1 + x2);
        x2 = 20;
        println(x1 + x2);
        x1 = 10; // error       
    }
    testUpvalueInner();
}

testUpvalue();

function testParameters(const a, b){ 
    println(a);
    println(b);
    a = 5; // error
    b = 5;
}
testParameters(2, 3);

println = true; // error becouse it's a native function
